# gpu-acceleration-test

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  index.html  serve.sh
src/: debug.rs  device_selector.rs  lib.rs  main.rs  render_device.rs  shader.wgsl  state.rs  system_info.rs  texture.rs  vertex.rs  web.rs
